--- a/src/main/resources/com/example/testpractice/bank-view.fxml
+++ b/src/main/resources/com/example/testpractice/bank-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -15,45 +16,109 @@
          <children>
             <VBox prefHeight="800.0" prefWidth="500.0">
                <children>
-                  <ImageView fx:id="customerImageView" fitHeight="400.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label prefHeight="75.0" prefWidth="500.0" text="Customer Number" />
-                  <Label prefHeight="75.0" prefWidth="500.0" text="First name last name" />
-                  <Label prefHeight="75.0" prefWidth="500.0" text="Address" />
-                  <Label prefHeight="75.0" prefWidth="500.0" text="DOB" />
+                  <ImageView fx:id="customerImageView" fitHeight="400.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </ImageView>
+                  <Label fx:id="custNumLabel" prefHeight="75.0" prefWidth="500.0" text="Customer Number">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label fx:id="custNameLabel" prefHeight="75.0" prefWidth="500.0" text="First name last name">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label fx:id="custAddressLabel" prefHeight="75.0" prefWidth="500.0" text="Address">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label fx:id="custDOBLabel" prefHeight="75.0" prefWidth="500.0" text="DOB">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Label>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="backButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Back" />
-                        <Button fx:id="forwardButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Forward" />
+                        <Button fx:id="backButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Back">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="forwardButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Forward">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
                      </children>
                   </HBox>
                </children>
             </VBox>
             <VBox prefHeight="800.0" prefWidth="500.0">
                <children>
-                  <ScrollPane prefHeight="400.0" prefWidth="500.0" />
-                  <HBox prefHeight="301.0" prefWidth="500.0">
+                  <Label fx:id="custAccountLabel" prefHeight="82.0" prefWidth="505.0" text="Customer #___'s Accounts:">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <ScrollPane fx:id="accountsPane" prefHeight="317.0" prefWidth="500.0">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                     <content>
+                        <VBox fx:id="accountsDisplayer" prefHeight="301.0" prefWidth="462.0" spacing="10.0" />
+                     </content>
+                  </ScrollPane>
+                  <HBox prefHeight="288.0" prefWidth="451.0">
                      <children>
-                        <VBox prefHeight="300.0" prefWidth="250.0">
+                        <VBox prefHeight="288.0" prefWidth="214.0">
                            <children>
-                              <Label prefHeight="60.0" prefWidth="250.0" text="First Name" />
-                              <Label prefHeight="60.0" prefWidth="250.0" text="Last Name" />
-                              <Label prefHeight="60.0" prefWidth="250.0" text="Address" />
-                              <Label prefHeight="60.0" prefWidth="250.0" text="Date of Birth" />
-                              <Label prefHeight="60.0" prefWidth="250.0" text="PIN" />
+                              <Label prefHeight="60.0" prefWidth="250.0" text="First Name">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label prefHeight="60.0" prefWidth="250.0" text="Last Name">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label prefHeight="60.0" prefWidth="250.0" text="Address">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label prefHeight="60.0" prefWidth="250.0" text="Date of Birth">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label prefHeight="60.0" prefWidth="250.0" text="PIN">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </Label>
                            </children>
                         </VBox>
-                        <VBox prefHeight="300.0" prefWidth="250.0">
+                        <VBox prefHeight="300.0" prefWidth="248.0">
                            <children>
-                              <TextField prefHeight="60.0" prefWidth="250.0" />
-                              <TextField prefHeight="60.0" prefWidth="250.0" />
-                              <TextField prefHeight="60.0" prefWidth="250.0" />
-                              <TextField prefHeight="60.0" prefWidth="250.0" />
-                              <TextField prefHeight="60.0" prefWidth="250.0" />
+                              <TextField fx:id="firstNameTextField" prefHeight="60.0" prefWidth="250.0" />
+                              <TextField fx:id="lastNameTextField" prefHeight="60.0" prefWidth="250.0" />
+                              <TextField fx:id="addressTextField" prefHeight="60.0" prefWidth="250.0" />
+                              <TextField fx:id="dobTextField" prefHeight="60.0" prefWidth="250.0" />
+                              <TextField fx:id="pinTextField" prefHeight="60.0" prefWidth="250.0" />
                            </children>
                         </VBox>
                      </children>
                   </HBox>
-                  <Button fx:id="addCustomerButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="500.0" text="Add Customer" />
+                  <Button fx:id="addCustomerButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="500.0" text="Add Customer">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
             </VBox>
          </children>
