--- a/src/main/resources/com/example/testpractice/bank-view.fxml
+++ b/src/main/resources/com/example/testpractice/bank-view.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" styleClass=".button" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.testpractice.BankController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1500.0" styleClass=".button" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.testpractice.BankController">
    <children>
-      <HBox prefHeight="805.0" prefWidth="1006.0">
+      <HBox prefHeight="806.0" prefWidth="1500.0">
          <children>
             <VBox prefHeight="800.0" prefWidth="500.0">
                <children>
@@ -115,6 +115,103 @@
                      </children>
                   </HBox>
                   <Button fx:id="addCustomerButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="500.0" text="Add Customer">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
+            <VBox prefHeight="800.0" prefWidth="500.0">
+               <children>
+                  <Label fx:id="selectedAcct" prefHeight="82.0" prefWidth="505.0" text="Selected Account: ">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <HBox prefHeight="49.0" prefWidth="490.0">
+                     <children>
+                        <Button fx:id="accountBackButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Back">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="accountForwardButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Forward">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="56.0" prefWidth="490.0">
+                     <children>
+                        <Label prefHeight="56.0" prefWidth="129.0" text="Deposit:" />
+                        <TextField fx:id="depositAmt" prefHeight="54.0" prefWidth="179.0" text="Amount" />
+                        <Button fx:id="depositConfirm" mnemonicParsing="false" prefHeight="43.0" prefWidth="153.0" text="Button">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="76.0" prefWidth="490.0">
+                     <children>
+                        <Label prefHeight="56.0" prefWidth="129.0" text="Withdraw" />
+                        <TextField fx:id="withdrawalAmt" prefHeight="54.0" prefWidth="179.0" text="Amount" />
+                        <Button fx:id="withdrawalConfirm" mnemonicParsing="false" prefHeight="43.0" prefWidth="153.0" text="Button">
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <VBox prefHeight="214.0" prefWidth="490.0">
+                     <children>
+                        <HBox prefHeight="56.0" prefWidth="490.0">
+                           <children>
+                              <Label prefHeight="56.0" prefWidth="129.0" text="EFT:" />
+                              <TextField fx:id="eftAmount" prefHeight="54.0" prefWidth="179.0" text="Amount" />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="81.0" prefWidth="490.0">
+                           <children>
+                              <TextField fx:id="eftSenderNum" prefHeight="60.0" prefWidth="230.0" text="Sender Acct. No">
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </HBox.margin>
+                              </TextField>
+                              <TextField fx:id="eftRecipientNum" prefHeight="60.0" prefWidth="230.0" text="Recipient Acct. No">
+                                 <HBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </HBox.margin>
+                              </TextField>
+                           </children>
+                        </HBox>
+                        <Button fx:id="eftConfirmation" mnemonicParsing="false" prefHeight="67.0" prefWidth="490.0" text="Confirm Transfer" />
+                     </children>
+                  </VBox>
+                  <HBox prefHeight="84.0" prefWidth="490.0">
+                     <children>
+                        <VBox prefHeight="288.0" prefWidth="214.0">
+                           <children>
+                              <Label prefHeight="60.0" prefWidth="250.0" text="Account Type:">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="300.0" prefWidth="248.0">
+                           <children>
+                              <TextField fx:id="accountTypeField" prefHeight="60.0" prefWidth="250.0">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </TextField>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <Button fx:id="addAccountButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="500.0" text="Add New Account">
                      <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
