--- a/src/main/resources/com/example/testpractice/bank-view.fxml
+++ b/src/main/resources/com/example/testpractice/bank-view.fxml
@@ -101,6 +101,11 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </VBox.margin>
                               </Label>
+                              <Label prefHeight="60.0" prefWidth="250.0" text="Customer Image:">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </Label>
                            </children>
                         </VBox>
                         <VBox prefHeight="300.0" prefWidth="248.0">
@@ -110,11 +115,12 @@
                               <TextField fx:id="addressTextField" prefHeight="60.0" prefWidth="250.0" />
                               <TextField fx:id="dobTextField" prefHeight="60.0" prefWidth="250.0" />
                               <TextField fx:id="pinTextField" prefHeight="60.0" prefWidth="250.0" />
+                              <TextField fx:id="customerImageSrc" prefHeight="60.0" prefWidth="250.0" promptText="default: portrait3.jpg" />
                            </children>
                         </VBox>
                      </children>
                   </HBox>
-                  <Button fx:id="addCustomerButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="500.0" text="Add Customer">
+                  <Button fx:id="addCustomerButton" mnemonicParsing="false" prefHeight="55.0" prefWidth="470.0" text="Add Customer">
                      <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
@@ -145,7 +151,7 @@
                   <HBox prefHeight="56.0" prefWidth="490.0">
                      <children>
                         <Label prefHeight="56.0" prefWidth="129.0" text="Deposit:" />
-                        <TextField fx:id="depositAmt" prefHeight="54.0" prefWidth="179.0" text="Amount" />
+                        <TextField fx:id="depositAmt" prefHeight="54.0" prefWidth="179.0" promptText="Amount" />
                         <Button fx:id="depositConfirm" mnemonicParsing="false" prefHeight="43.0" prefWidth="153.0" text="Button">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -156,7 +162,7 @@
                   <HBox prefHeight="76.0" prefWidth="490.0">
                      <children>
                         <Label prefHeight="56.0" prefWidth="129.0" text="Withdraw" />
-                        <TextField fx:id="withdrawalAmt" prefHeight="54.0" prefWidth="179.0" text="Amount" />
+                        <TextField fx:id="withdrawalAmt" prefHeight="54.0" prefWidth="179.0" promptText="Amount" />
                         <Button fx:id="withdrawalConfirm" mnemonicParsing="false" prefHeight="43.0" prefWidth="153.0" text="Button">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -169,17 +175,17 @@
                         <HBox prefHeight="56.0" prefWidth="490.0">
                            <children>
                               <Label prefHeight="56.0" prefWidth="129.0" text="EFT:" />
-                              <TextField fx:id="eftAmount" prefHeight="54.0" prefWidth="179.0" text="Amount" />
+                              <TextField fx:id="eftAmount" prefHeight="54.0" prefWidth="179.0" promptText="Amount" />
                            </children>
                         </HBox>
                         <HBox prefHeight="81.0" prefWidth="490.0">
                            <children>
-                              <TextField fx:id="eftSenderNum" prefHeight="60.0" prefWidth="230.0" text="Sender Acct. No">
+                              <TextField fx:id="eftSenderNum" prefHeight="60.0" prefWidth="230.0" promptText="Sender Acct. No">
                                  <HBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </HBox.margin>
                               </TextField>
-                              <TextField fx:id="eftRecipientNum" prefHeight="60.0" prefWidth="230.0" text="Recipient Acct. No">
+                              <TextField fx:id="eftRecipientNum" prefHeight="60.0" prefWidth="230.0" promptText="Recipient Acct. No">
                                  <HBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </HBox.margin>
@@ -216,6 +222,11 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
                   </Button>
+                  <Label fx:id="errorOutput" prefHeight="52.0" prefWidth="470.0">
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Label>
                </children>
             </VBox>
          </children>
