--- a/src/main/resources/com/example/testpractice/bank-view.fxml
+++ b/src/main/resources/com/example/testpractice/bank-view.fxml
@@ -59,7 +59,7 @@
             </VBox>
             <VBox prefHeight="800.0" prefWidth="500.0">
                <children>
-                  <Label fx:id="custAccountLabel" prefHeight="82.0" prefWidth="505.0" text="Customer #___'s Accounts:">
+                  <Label fx:id="custAccountLabel" prefHeight="82.0" prefWidth="505.0" text="Customer's Accounts">
                      <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
@@ -129,7 +129,7 @@
             </VBox>
             <VBox prefHeight="800.0" prefWidth="500.0">
                <children>
-                  <Label fx:id="selectedAcct" prefHeight="82.0" prefWidth="505.0" text="Selected Account: ">
+                  <Label fx:id="selectedAcct" prefHeight="82.0" prefWidth="505.0" text="Account Functions:">
                      <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
@@ -152,7 +152,7 @@
                      <children>
                         <Label prefHeight="56.0" prefWidth="129.0" text="Deposit:" />
                         <TextField fx:id="depositAmt" prefHeight="54.0" prefWidth="179.0" promptText="Amount" />
-                        <Button fx:id="depositConfirm" mnemonicParsing="false" prefHeight="43.0" prefWidth="153.0" text="Button">
+                        <Button fx:id="depositConfirm" mnemonicParsing="false" prefHeight="43.0" prefWidth="153.0" text="Deposit">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
@@ -163,7 +163,7 @@
                      <children>
                         <Label prefHeight="56.0" prefWidth="129.0" text="Withdraw" />
                         <TextField fx:id="withdrawalAmt" prefHeight="54.0" prefWidth="179.0" promptText="Amount" />
-                        <Button fx:id="withdrawalConfirm" mnemonicParsing="false" prefHeight="43.0" prefWidth="153.0" text="Button">
+                        <Button fx:id="withdrawalConfirm" mnemonicParsing="false" prefHeight="43.0" prefWidth="153.0" text="Withdraw">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
