Change image implementation to fix testing

--- a/src/main/resources/com/example/testpractice/style.css
+++ b/src/main/resources/com/example/testpractice/style.css
@@ -1,5 +1,5 @@
 .anchorPane {
-    -fx-background-image: url("../../../cardBackground.jpg");
+    -fx-background-image: url("cardBackground.jpg");
 }
 
 * {
